<resources>
    <string name="app_name">audioserve</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">audioserve</string>
    <string name="nav_header_subtitle"><a href="https://github.com/izderadicka/audioserve-android">View It at Github</a></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="collections_title">Select Online Collection</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="label_next">Next</string>
    <string name="label_previous">Previous</string>
    <string name="media_browser_error">Media browser error</string>
    <string name="empty_folder">Empty folder</string>
    <string name="pref_server_url_title">Server URL</string>
    <string name="pref_shared_secret_title">Shared secret</string>
    <string name="pref_shared_secret_summary_set">Secret is set</string>
    <string name="pref_shared_secret_summary_empty">Shared secret is empty!</string>
    <string name="action_reload">Reload</string>
    <string name="action_exit">Exit</string>
    <string name="pref_server_url_error_msg">Server URL must be http or https and path should end with /</string>
    <string name="pref_test_connection_title">Test Connection</string>
    <string name="pref_test_connection_summary">Click to test that server connection is working</string>
    <string name="connection_working">Connection is working</string>
    <string name="connection_error">Connection error: %1$s</string>
    <string name="unknown_error">Unknown</string>
    <string name="pref_cache_size_title">Media cache size (MB)</string>
    <string name="pref_clear_cache_title">Clear cache</string>
    <string name="pref_clear_cache_summary">Click here to clear the cache</string>
    <string name="pref_clear_cache_default" translatable="false">500</string>
    <string name="action_browse">Browse Collections</string>
    <string name="recently_listened">Recently Listened</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Enter search text</string>
    <string name="search_warning">Search must be at least 3 characters</string>
    <string name="prefs_server_title">SERVER</string>
    <string name="pref_preload_title">Files to cache ahead</string>
    <string name="prefs_cache_title">CACHE</string>
    <string name="pref_transcoding_title">Transcoding profile</string>
    <string name="no_transcoding">No transcoding is done</string>
    <string name="pref_transcoding_summary">Transcoding profile is %1$s</string>
    <string name="pref_preload_summary">Will preload %1$s files ahead of currently playing</string>
    <string name="transcoding_no">No Transcoding</string>
    <string name="transcoding_low">Low</string>
    <string name="transcoding_medium">Medium</string>
    <string name="transcoding_high">High</string>
    <string name="pref_cache_location_title">Location of media cache</string>
    <string name="storage_internal_cache">Internal Cache</string>
    <string name="storage_internal">Internal Storage</string>
    <string name="storage_external">External Media Storage %1$s</string>
    <string name="download_confirmation">Will download audio files from this one on</string>
    <string name="action_recently_listened">Recently Listened</string>
    <string name="action_offline">Force Offline</string>
    <string name="collection_offline">Select Offline Folder</string>
    <string name="downloading_notification_title">Downloading, remaining files</string>
    <string name="download_notification_details">Summary - Success %1$d,  Errors %2$d</string>
    <string name="action_cancel_all">Cancel All</string>
    <string name="no_downloads_offline">No downloads in offline mode</string>
    <string name="action_info">Info</string>
    <string name="clock_image">Clock image</string>
    <string name="label_minutes_short">mins</string>
    <string name="note_image">Note image</string>
    <string name="folder_image">Folder Image</string>
    <string name="image_about_current_folder">Image about current folder</string>
    <string name="player_not_ready">Player not ready - probably not connected to server</string>
    <string name="transcoding">TRANSCODING</string>
    <string name="pref_downloads_summary">When dowloading folder %1$s files will download in parallell.
    Assure you have enough transcoding slots on the server</string>
    <string name="action_sleep_timer">Sleep Timer Details</string>
    <string name="minutes">Minutes</string>
    <string name="extend_by">Extend By</string>
    <string name="pause_after">Pause After</string>
    <string name="cancel">Cancel</string>
    <string name="extend">Extend</string>
    <string name="sleep_notification_title">audioserve will sleep in</string>
    <string name="sleep_notification_text">Expand for actions</string>
    <string name="action_cancel_sleep_timer">Cancel Sleep Timer</string>
    <string name="label_sound_notifications">Sound Notifications</string>
    <string name="free_capacity">%1$s free</string>
    <string name="minutes_abr">m</string>
    <string name="download_notification_errors">Download ended with %1$s errors!</string>
    <string name="prefs_category_downloads">DOWNLOADS</string>
    <string name="prefs_category_playback">PLAYBACK</string>
    <string name="pref_autorewind_title">Auto Rewind</string>
    <string name="pref_autorewind_unselected_title">No auto rewind, playback will start exactly where it was paused</string>
    <string name="pref_autorewind_selected_title">Before continuing playback track\'\'ll be rewound by a small amount (2s-30s), depending on how long it was paused</string>
    <string name="label_rewind">Rewind</string>
    <string name="label_forward">Forward</string>
    <string name="pref_web_search_prefix_title">Web search prefix</string>
    <string name="pref_web_search_prefix_summary_empty">No prefix. You can set one to limit web search for folder details</string>
    <string name="pref_web_search_prefix_summary">Prefix %1$s is used to search web for folder details</string>
    <string name="pref_delayed_fg_stop_title">Keep running in foreground</string>
    <string name="pref_delayed_fg_stop_summary_off">After pause player service is not running in foreground. This can save some batteries, but system can recycle it soon. You can set number of hours service will be kept in foreground after pause.</string>
    <string name="pref_delayed_fg_stop_summary_on">After pause player service will remain in foreground for %1$s hours. This will assure quicker continuation, but can consume some very small amount of power. By setting to 0 you can turn this off.</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="folder_bookmarks">Bookmarks</string>
    <string name="default_bookmark_category">TO_LISTEN</string>
    <string name="pref_skip_silence_title">Skip silence</string>
    <string name="pref_skip_silence_selected_summary">Skips silent moments during playback.</string>
    <string name="pref_skip_silence_unselected_summary">Normal playback. Skips nothing.</string>
    <string name="pref_playback_speed">Playback speed</string>
    <string name="pref_playback_pitch">Playback pitch</string>
    <string name="skip_silence">Skip Silence:</string>
    <string name="speed">Speed:</string>
    <string name="boost_volume">Boost Volume:</string>
    <string name="pref_volume_boost_title">Volume boost</string>
    <string name="pref_volume_boost_db_title">Volume boost gain</string>
    <string name="pref_volume_boost_on_summary">Volume is boosted</string>
    <string name="pref_volume_boost_off_summary">Normal volume limits</string>
    <string name="pref_volume_boost_db_summary">If Volume boost switch is on volume will be amplified by %1$s dB (valid values are 1 - 30 dB)</string>
    <string name="pitch">Pitch:</string>
    <string name="action_modified">Recently Modified</string>
    <string name="recently_modified">Recently Modified Folders</string>
    <string name="start_sleep_timer">Start Sleep Timer</string>
    <string name="press_back_toast">Press Back again to exit</string>
    <string name="folders_ordering">Folders Ordering</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="recent_first">Recent First</string>
    <string name="pref_group_title">Group</string>
    <string name="pref_group_summary_null">This device is not part of group, it will not send position updates to server and will not sync position with other devices</string>
    <string name="pref_group_summary_filled">"This device is part of group %1$s, it will share and sync position with other devices in this group. Set empty to disable this."</string>
    <string name="remote_pos">Remote: %1$s</string>
    <string name="check_remote_positions">Check Remote Positions</string>
    <string name="other_playback_positions">Other Playback Positions</string>
    <string name="continue_with_current">Continue With Current</string>
    <string name="recent_positions_intro">Below are most recent shared playback positions. Click on them to continue to listen there:</string>
    <string name="recent_positions_none">No recent shared positions other then current</string>
    <string name="pref_category_appearance">APPEARANCE</string>
    <string name="pref_category_other">OTHER</string>
    <string name="pref_night_theme_system">Per System Settings</string>
    <string name="pref_night_theme_day">Always Day</string>
    <string name="pref_night_theme_night">Always Night</string>
    <string name="pref_night_theme_name">Day/Night Theme</string>
</resources>
