<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_info"
        android:title="@string/action_info"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info"
        />

    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:title="@string/action_reload"
        android:icon="@drawable/ic_reload"
        app:showAsAction="ifRoom" />
</menu>
