<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_menu_browse"
            android:title="@string/action_browse" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_menu_recent"
            android:title="Recently Listened" />
    </group>


    <group android:id="@+id/nav_group_system">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/action_exit" />

    </group>


</menu>
