<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pause_after"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sleepAfter"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/sleepAfter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minutes"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sleepAfter"
        app:layout_constraintStart_toStartOf="@+id/sleepAfter"
        app:layout_constraintTop_toBottomOf="@+id/sleepAfter" />

    <NumberPicker
        android:id="@+id/sleepAfter"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </NumberPicker>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/extend_by"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/extendBy"
        app:layout_constraintStart_toStartOf="@+id/extendBy"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/minutes"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/extendBy"
        app:layout_constraintStart_toStartOf="@+id/extendBy"
        app:layout_constraintTop_toBottomOf="@+id/extendBy" />

    <NumberPicker
        android:id="@+id/extendBy"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

    </NumberPicker>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>